--- a/blocks/sidebar/sidebar.css
+++ b/blocks/sidebar/sidebar.css
@@ -22,7 +22,7 @@
 
 .sidebar__items {
     height: 460px;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .sidebar__item {
@@ -46,7 +46,7 @@
     float:left;
     height: 40px;
     width: 40px;
-    padding-top: 5px;
+    margin-top: 5px;
     margin-left: 10px;
     border-radius: 50%;
 }
